@@ -56,6 +56,15 @@ assert($es[0]->innertext=='');
 assert($es[0]->outertext=='<img class="class0" id="id0" src="src0">');
 
 // -----------------------------------------------
+// index
+assert($dom->find('img', 0)->src=='src0');
+assert($dom->find('img', 1)->src=='src1');
+assert($dom->find('img', 2)->src=='src2');
+assert($dom->find('img', -3)->src=='src0');
+assert($dom->find('img', -2)->src=='src1');
+assert($dom->find('img', -1)->src=='src2');
+
+// -----------------------------------------------
 // id
 $es = $dom->find('img#id1');
 assert(count($es)==1);
